--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="pt-5 flex items-center">
-        <h2 class="font-bold text-[20px] text-gray-500">Age :</h2>
+        <h2 class="font-bold text-[20px] text-gray-500 me-6">Age :</h2>
         <div *ngIf="userAge" class="mx-3">
           <span
             class="border-b  text-slate-700 font-bold dark:text-gray-200"
