--- a/src/app/components/cash/cash.component.html
+++ b/src/app/components/cash/cash.component.html
@@ -3,7 +3,7 @@
     class="flex flex-col lg:flex-row items-center justify-center lg:min-h-[90vh]"
   >
     <div class="p-5">
-      <img src="./assets/images/online.png" alt="online" />
+      <img src="../../../assets/images/cash.png" alt="online" />
     </div>
     <div class="shadow-lg shadow-slate-700 p-5 rounded-lg dark:shadow-none">
       <div class="text-center md:py-12">
