--- a/src/app/components/nav-user/nav-user.component.html
+++ b/src/app/components/nav-user/nav-user.component.html
@@ -24,6 +24,13 @@
         >
           <a routerLink="home">Home</a>
         </li>
+        <li
+          (click)="toggleNav()"
+          li
+          class="tracking-wide font-medium text-1xl hover:text-gray-500 transition"
+        >
+          <a routerLink="allorders">My Orders</a>
+        </li>
 
         <li
           (click)="toggleNav()"
@@ -73,15 +80,11 @@
     <!-- * sign in -->
     <div class="text-center flex relative">
       <button class="mx-3" (click)="togglemenu()">
-        <img
-          [src]="photo"
-          alt="user"
-          class="w-[40px] rounded-full"
-        />
+        <img [src]="photo" alt="user" class="w-[40px] rounded-full" />
       </button>
       <div
-        class="absolute top-[50px] left-[-50px] w-[150px] bg-slate-200 dark:bg-slate-950 rounded-lg text-white p-3 flex flex-col opacity-0"
-        [class.opacity-100]="userOpen"
+        class="absolute top-[50px] left-[-50px] w-[150px] bg-slate-200 dark:bg-slate-950 rounded-lg text-white p-3 flex flex-col"
+        *ngIf="userOpen"
       >
         <button
           class="py-1 px-3 bg-slate-800 hover:bg-slate-600 transition rounded-lg font-bold my-2"
