--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,37 @@
-<p>footer works!</p>
+<div class="bg-slate-900 dark:bg-[#313b4b]">
+  <div
+    class="flex flex-col md:flex-row container mx-auto pt-2 text-slate-200 justify-between"
+  >
+    <div>
+      <h2 class="font-bold text-[40px] py-5">STore.</h2>
+      <p class="text-[16px] md:w-[350px]">
+        We are a young company always looking for new creative ideas to help you
+        with our products in your everyday work .
+      </p>
+    </div>
+    <div class="font-bold text-[20px]">
+      <h2 class="text-[40px] py-5">Contact</h2>
+
+      <div>
+        <i class="fa-solid fa-envelope"></i> Mail :
+        <span>mahmmaad96@gmail.com</span>
+      </div>
+      <div class="py-4">
+        <i class="fa-solid fa-phone"></i> Mail : <span>01111866113</span>
+      </div>
+    </div>
+    <div class="font-bold text-[20px]">
+      <h2 class="text-[40px] py-5">About Us</h2>
+
+      <div class="cursor-pointer">privacy policy</div>
+      <div class="py-4 cursor-pointer">Support</div>
+    </div>
+  </div>
+  <hr class="mt-4" />
+  <div
+    class="container mx-auto pt-6 text-slate-200 text-center text-[25px] font-bold"
+  >
+    Copyright &copy; <span class="text-slate-400">Mohamed Ahmed</span> All right
+    reserved .
+  </div>
+</div>
