--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
-<div class="bg-slate-900 dark:bg-[#313b4b]">
+<div class="bg-slate-900 dark:bg-[#212529]">
   <div
     class="flex flex-col md:flex-row container mx-auto pt-2 text-slate-200 justify-between"
   >
     <div>
-      <h2 class="font-bold text-[40px] py-5">STore.</h2>
+      <h2 class="font-bold text-[40px] py-5">Store.</h2>
       <p class="text-[16px] md:w-[350px]">
         We are a young company always looking for new creative ideas to help you
         with our products in your everyday work .
@@ -29,7 +29,7 @@
   </div>
   <hr class="mt-4" />
   <div
-    class="container mx-auto pt-6 text-slate-200 text-center text-[25px] font-bold"
+    class="container mx-auto pt-1 text-slate-200 text-center text-[25px] font-bold"
   >
     Copyright &copy; <span class="text-slate-400">Mohamed Ahmed</span> All right
     reserved .
