add cash payment

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,16 @@
 <div class="bg-slate-900 dark:bg-[#212529]">
   <div
-    class="flex flex-col md:flex-row container mx-auto pt-2 text-slate-200 justify-between"
+    class="flex flex-col md:flex-row container mx-auto pt-2 text-slate-200 justify-between p-5"
   >
     <div>
-      <h2 class="font-bold text-[40px] py-5">Store.</h2>
+      <h2 class="font-bold text-[30px] py-5">Store.</h2>
       <p class="text-[16px] md:w-[350px]">
         We are a young company always looking for new creative ideas to help you
         with our products in your everyday work .
       </p>
     </div>
     <div class="font-bold text-[20px]">
-      <h2 class="text-[40px] py-5">Contact</h2>
+      <h2 class="text-[30px] py-5">Contact</h2>
 
       <div>
         <i class="fa-solid fa-envelope"></i> Mail :
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="font-bold text-[20px]">
-      <h2 class="text-[40px] py-5">About Us</h2>
+      <h2 class="text-[30px] py-5">About Us</h2>
 
       <div class="cursor-pointer">privacy policy</div>
       <div class="py-4 cursor-pointer">Support</div>
