--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -36,7 +36,7 @@
       <form
         [formGroup]="registerForm"
         (ngSubmit)="handleForm()"
-        class="bg-white px-6 shadow rounded-lg dark:bg-[#313b4b] mt-4"
+        class="bg-white p-6 shadow rounded-lg dark:bg-[#313b4b] mt-4"
       >
         <h3 class="font-bold text-[20px] text-gray-700 dark:text-white">
           Register Form
