--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -24,7 +24,7 @@
     ></span>
   </div>
   <div
-    class="lg:w-[20%] p-5 shadow-xl shadow-slate-600 bg-slate-100 rounded-xl dark:bg-slate-800 dark:shadow-none"
+    class="lg:m-w-[30%] p-5 px-[50px] shadow-xl shadow-slate-600 bg-slate-100 rounded-xl dark:bg-slate-800 dark:shadow-none"
   >
     <h2 class="text-[40px] font-bold py-6 text-slate-700 dark:text-white">
       MY PROFILE
