--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -65,6 +65,14 @@
                 style="color: #ff3b3b"
               ></i>
             </ng-container>
+            <i
+              *ngIf="item.product.ratingsAverage < 5"
+              class="fa-solid fa-star repeat_here text-black dark:text-[#ffffff]"
+            ></i>
+            <i
+              *ngIf="item.product.ratingsAverage < 4"
+              class="fa-solid fa-star repeat_here text-black dark:text-[#ffffff]"
+            ></i>
           </span>
         </div>
       </div>
@@ -151,6 +159,15 @@
                       style="color: #ff3b3b"
                     ></i>
                   </ng-container>
+
+                  <i
+                    *ngIf="item.product.ratingsAverage < 5"
+                    class="fa-solid fa-star repeat_here text-black dark:text-[#ffffff]"
+                  ></i>
+                  <i
+                    *ngIf="item.product.ratingsAverage < 4"
+                    class="fa-solid fa-star repeat_here text-black dark:text-[#ffffff]"
+                  ></i>
                 </span>
               </div>
             </td>
