--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-300 dark:bg-[#15191d] dark:text-white">
+<section class="bg-gray-300 dark:bg-[#15191d] dark:text-white py-5">
   <div
     class="container mx-auto flex md:justify-evenly lg:flex-row flex-col items-center min-h-[95vh]"
   >
