--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -13,6 +13,7 @@
       ><i class="fa-solid fa-pencil text-[25px] text-slate-200 cursor-pointer">
         <input
           type="file"
+          accept="image/*"
           (change)="onFileSelected($event)"
           class="hidden"
           #fileInput /></i
