add image behavior

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   </button>
 </div>
 
-<ngx-spinner type="ball-scale-multiple" bdColor="rgba(250, 250, 250, .9)">
+<ngx-spinner type="ball-scale-multiple" bdColor="rgba(250, 250, 250, 1)">
   <img
     src="./assets/images/pngtree-palestinian-independence-png-image_6347901-removebg-preview.png"
     class=""
